fix: add dimensions to images & add common  style.css

--- a/catalog.html
+++ b/catalog.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="catalog-style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="img/favicon/favicon.png">
     <title>HTML Academy: Седона</title>
 </head>
 <body>
-    <header data-test="header" class="main-header">
+    <header class="main-header">
         <nav>
             <a href="index.html" class="logo">
                 <img src="img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
@@ -46,8 +46,8 @@
             </ul>
         </nav>
     </header>
-    <main data-test="main">
-        <section data-test=" filter">
+    <main class="main">
+        <section class="filter">
             <h1>Гостиницы Седоны</h1>
             <div>
                 <a href="index.html">
@@ -90,17 +90,15 @@
                 </fieldset>
                 <fieldset>
                     <legend>Стоимость,<span>₽</span>:</legend>
-                    <label for="min-price">
-                        <input type="number" min="0" max="15000" name="min-price" id="min-price" value="0">
+                    <label>
+                        <input type="number" min="0" max="15000" name="min-price" value="0">
                         от
                     </label>
-                    <label for="max-price">
-                        <input type="number" min="0" max="15000" name="max-price" id="max-price" value="9000">
-                    до</label>
-                    <b>
+                    <label>
+                        <input type="number" min="0" max="15000" name="max-price" value="9000">
+                        до
+                    </label>
                         <input type="range" min="0" max="15000" step="1">
-                    </b>
-                    <!-- можно input вложить в <b>? -->
                 </fieldset>
                 <button class="apply">Применить</button>
                 <button class="reset">Сбросить</button>
@@ -242,7 +240,7 @@
                 </li>
             </ul>
         </section>
-        <section data-test="subscribe" class="subscription">
+        <section class="subscribe">
             <h2>Подпишитесь на рассылку</h2>
             <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
             <form action="https://echo.htmlacademy.ru/" method="post">
@@ -251,21 +249,21 @@
             </form>
         </section>
     </main>
-    <footer data-test="footer" class="main-footer">
+    <footer class="main-footer">
         <ul class="social-list">
             <li class="social-item">
                 <a href="https://vk.com/htmlacademy">
-                    <img src="img/icons/vk.svg" alt="vk page">
+                    <img src="img/icons/vk.svg" alt="vk page" width="24" height="14">
                 </a>
             </li>
             <li class="social-item">
                 <a href="https://t.me/htmlacademy">
-                    <img src="img/icons/telegram.svg" alt="telegram">
+                    <img src="img/icons/telegram.svg" alt="telegram" width="18" height="16">
                 </a>
             </li>
             <li class="social-item">
             <a href="https://www.youtube.com/user/htmlacademyru">
-                <img src="img/icons/youtube.svg" alt="youtube channel">
+                <img src="img/icons/youtube.svg" alt="youtube channel" width="22" height="17">
                 </a>
             </li>
         </ul>
@@ -273,7 +271,7 @@
             <a href="tel:+78128121212">+7 (812) 812-12-12</a>
         </span>
         <a href=" https://htmlacademy.ru/">
-            <img src="img/icons/logo-htmlacademy.svg" alt="html academy website">
+            <img src="img/icons/logo-htmlacademy.svg" alt="html academy website" width="115" height="33">
         </a>
     </footer>
 </body>
