--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
       </section>
       <section class="hotel-search">
         <h2>Заинтересовались?</h2>
-        <p>Укажите предполагаемые даты поездки,
+        <p>Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a href="#">
           ПОИСК ГОСТИНИЦЫ В СЕДОНЕ
@@ -125,10 +125,10 @@
       </section>
       <section class="subscribe">
         <h2>Подпишитесь на рассылку</h2>
-        <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="https://echo.htmlacademy.ru/" method="post">
-          <input type="email" name="email" id="email" placeholder="Ваш e-mail">
-          <input type="submit" value="Подписаться">
+        <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <input class="email-subscribe" type="email" name="email" id="email" placeholder="Ваш e-mail">
+          <input class="button-subscribe" type="submit" value="Подписаться">
         </form>
       </section>
     </main>
