feat: add normalize.css

--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial.scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial.scale=1.0, viewport-fit=cover">
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="styles/common-style.css">
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="icon" href="img/favicon/favicon.svg" type="image/svg+xml">
-    <link rel="apple-touch-icon" href="img/favicon/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
+    <link rel="alternate icon" type="image/png" href="img/favicon/favicon.png">
     <title>HTML Academy: Седона</title>
   </head>
   <body>
