--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial.scale=1.0, viewport-fit=cover">
-    <link rel="stylesheet" href="normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/common-style.css">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
@@ -56,7 +56,7 @@
         because the grand canyon sucks">
         <img class="divider" src="img/images/divider.png" alt="divider">
         <div class="about-sedona">
-          <h2>Седона — небольшой городок в Аризоне,<br>
+          <h2 class="about-sedona-h2">Седона — небольшой городок в Аризоне,<br>
             заслуживающий большего!</h2>
           <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </div>
@@ -117,7 +117,7 @@
         </ul>
       </section>
       <section class="hotel-search">
-        <h2>Заинтересовались?</h2>
+        <h2 class="hotel-search-h2">Заинтересовались?</h2>
         <p>Укажите предполагаемые даты поездки,<br>
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a href="#">
@@ -126,7 +126,7 @@
         <!-- ссылка на попап а не стр -->
       </section>
       <section class="subscribe">
-        <h2>Подпишитесь на рассылку</h2>
+        <h2 class="subscribe-h2">Подпишитесь на рассылку</h2>
         <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
         <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
           <input class="email-subscribe" type="email" name="email" id="email" placeholder="Ваш e-mail">
@@ -138,24 +138,37 @@
       <ul class="social-list">
         <li class="social-item">
           <a href="https://vk.com/htmlacademy">
-            <img src="img/icons/vk.svg" alt="vk page" width="24" height="14">
+            <svg xmlns="http://www.w3.org/2000/svg" width="25" height="15" fill="none">
+              <path fill="#83B3D3" fill-rule="evenodd" d="M24.1 1.8c.2-.5 0-1-.8-1h-2.6c-.7 0-1
+              .4-1.1.8 0 0-1.4 3.2-3.3 5.3-.6.6-.9.8-1.2.8-.2 0-.4-.2-.4-.8V1.8c0-.7-.2-1-.8-1h-4c-.5
+              0-.8.4-.8.6 0 .7 1 .8 1 2.6v3.8c0 .8 0 1-.4 1-.9 0-3-3.3-4.3-7-.3-.7-.5-1-1.2-1H1.6c-.8
+              0-1 .4-1 .8 0 .7 1 4 4.2 8.5C7 13.2 10 15 12.8 15c1.7 0 1.9-.4 1.9-1v-2.4c0-.7.2-.8.7-.8.4
+              0 1 .1 2.6 1.6 1.8 1.8 2 2.6 3 2.6h2.7c.7 0 1.1-.4 1-1.1-.3-.8-1.2-1.8-2.3-3-.6-.8-1.5-1.5-1.8-2-.4-.4-.3-.6
+              0-1 0 0 3.2-4.5 3.5-6Z" clip-rule="evenodd"/>
+            </svg>
           </a>
         </li>
         <li class="social-item">
           <a href="https://t.me/htmlacademy">
-            <img src="img/icons/telegram.svg" alt="telegram" width="18" height="16">
+            <svg xmlns="http://www.w3.org/2000/svg" width="18" height="17" fill="none">
+              <path fill="#83B3D3" d="M16.8 1 .8 7c-1 .4-1 1-.2 1.3l4.1 1.3 9.5-6c.5-.3.9-.1.5.2l-7.6
+              7-.3 4.1c.4 0 .6-.2.8-.4l2-2 4.1 3.1c.8.5 1.3.3 1.5-.7L18 2.2c.3-1-.4-1.6-1.1-1.2Z"/>
+            </svg>
           </a>
         </li>
         <li class="social-item">
           <a href="https://www.youtube.com/user/htmlacademyru">
-            <img src="img/icons/youtube.svg" alt="youtube channel" width="22" height="17">
+            <svg xmlns="http://www.w3.org/2000/svg" width="23" height="18" fill="none">
+              <path fill="#83B3D3" d="M19 .4H3.4C1.6.4.3 2 .3 3.8v10c0 2 1.3 3.6 3.2 3.6h15.7c1.6
+              0 3.1-1.6 3.1-3.4V3.8C22.1 2 20.8.4 19 .4ZM8 12.9v-8l7.3 4-7.3 4Z"/>
+            </svg>
           </a>
         </li>
       </ul>
       <span class="phone">
         <a href="tel:+78128121212">+7 (812) 812-12-12</a>
       </span>
-      <a class="htmlacademy-logo" href=" https://htmlacademy.ru/">
+      <a class="htmlacademy-logo" href="https://htmlacademy.ru/">
         <img src="img/icons/logo-htmlacademy.svg" alt="html academy website" width="115" height="33">
       </a>
     </footer>
