feat: add styles in main.css

--- a/catalog.html
+++ b/catalog.html
@@ -151,12 +151,7 @@
                         <button type="button">в избранное</button>
                     </div>
                     <div class="stars-and-rank">
-                        <div class="stars">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                        </div>
+                        <img src="img/icons/fourStars.svg" alt="four rating star">
                         <p>Рейтинг: <span>8,5</span></p>
                     </div>
                 </li>
@@ -174,12 +169,7 @@
                         <button type="button">в избранном</button>
                     </div>
                     <div class="stars-and-rank">
-                        <div class="stars">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                        </div>
+                        <img src="img/icons/fourStars.svg" alt="four rating star">
                         <p>Рейтинг: <span>9,2</span></p>
                     </div>
                 </li>
@@ -197,11 +187,7 @@
                         <button type="button">в избранное</button>
                     </div>
                     <div class="stars-and-rank">
-                        <div class="stars">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                        </div>
+                        <img src="img/icons/threeStars.svg" alt="three rating star">
                         <p>Рейтинг: <span>6,9</span></p>
                     </div>
                 </li>
@@ -219,10 +205,7 @@
                         <button type="button">в избранное</button>
                     </div>
                     <div class="stars-and-rank">
-                        <div class="stars">
-                            <img src="img/icons/star.svg" alt="rating star">
-                            <img src="img/icons/star.svg" alt="rating star">
-                        </div>
+                        <img src="img/icons/twoStars.svg" alt="two rating star">
                         <p>Рейтинг: <span>5,0</span></p>
                     </div>
                 </li>
