--- a/index.html
+++ b/index.html
@@ -62,57 +62,59 @@
         </div>
       </section>
       <section class="advantages" id="advantages">
-          <div class="advantage-item">
-            <h3 class="advantages-h3">Настоящий городок</h3>
-            <div class="advantages-separator"></div>
-            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-          </div>
-          <div class="advantage-item img-advantage">
-            <img src="img/images/true-city.jpg" alt="city photo" width="800" height="385">
-          </div>
-          <div class="advantage-item">
-            <h3 class="advantages-h3">Небольшая площадь</h3>
-            <div class="advantages-separator"></div>
-            <p>Все достопримечательности находятся очень близко</p>
-          </div>
-          <div class="advantage-item">
-            <h3 class="advantages-h3">Красивая дорога</h3>
-            <div class="advantages-separator"></div>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </div>
-          <div class="advantage-item">
-            <h3 class="advantages-h3">Мало туристов</h3>
-            <div class="advantages-separator"></div>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </div>
-          <div class="advantage-item img-advantage">
-            <img src="img/images/devil-bridge.jpg" alt="canyon photo" width="800" height="385">
-          </div>
-          <div class="advantage-item">
-            <h3 class="advantages-h3">Там есть мост дьявола</h3>
-            <div class="advantages-separator"></div>
-            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-          </div>
-        <h2 class="slogan-name">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p>Опытный персонал и качественное обслуживание!</p>
+        <div class="advantage-item">
+          <h3 class="advantages-h3">Настоящий городок</h3>
+          <div class="advantages-separator"></div>
+          <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+        </div>
+        <div class="advantage-item img-advantage">
+          <img src="img/images/true-city.jpg" alt="city photo" width="800" height="385">
+        </div>
+        <div class="advantage-item">
+          <h3 class="advantages-h3">Небольшая площадь</h3>
+          <div class="advantages-separator"></div>
+          <p>Все достопримечательности находятся очень близко</p>
+        </div>
+        <div class="advantage-item">
+          <h3 class="advantages-h3">Красивая дорога</h3>
+          <div class="advantages-separator"></div>
+          <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+        </div>
+        <div class="advantage-item">
+          <h3 class="advantages-h3">Мало туристов</h3>
+          <div class="advantages-separator"></div>
+          <p>Большинство едет в Гранд Каньон и толпится там</p>
+        </div>
+        <div class="advantage-item img-advantage">
+          <img src="img/images/devil-bridge.jpg" alt="canyon photo" width="800" height="385">
+        </div>
+        <div class="advantage-item">
+          <h3 class="advantages-h3">Там есть мост дьявола</h3>
+          <div class="advantages-separator"></div>
+          <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+        </div>
+        <div class="slogan">
+          <h2 class="slogan-name">Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <p>Опытный персонал и качественное обслуживание!</p>
+        </div>
         <ul class="advantage-list">
-          <li class="advantage-item">
+          <li class="advantage-list-item">
             <img src="img/icons/home.svg" alt="house" width="75" height="72">
             <h3 class="recommend-h3">Жильё</h3>
             <p>Рекомендуем пожить в настоящем мотеле,
               всё как в кино!</p>
           </li>
-          <li class="advantage-item">
+          <li class="advantage-list-item">
             <img src="img/icons/food.svg" alt="burger" width="75" height="72">
             <h3 class="recommend-h3">Еда</h3>
-            <p>Всегда заказывайте
-              топовый фирменный бургер, вы не разочаруетесь!</p>
+            <p>Всегда заказывайте<br>
+              топовый фирменный бургер,<br> вы не разочаруетесь!</p>
           </li>
-          <li class="advantage-item">
+          <li class="advantage-list-item">
             <img src="img/icons/souvenir.svg" alt="present" width="75" height="72">
             <h3 class="recommend-h3">Сувениры</h3>
-            <p>Не только китайского,
-              но и настоящего местного производства!</p>
+            <p>Не только китайского,<br>
+              но и настоящего местного<br> производства!</p>
           </li>
         </ul>
       </section>
