feat: add styles in main.css, catalog.css and common-style.css

--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
           <p>Все достопримечательности находятся очень близко</p>
         </div>
         <div class="advantage-item">
-          <h3 class="advantages-h3">Красивая дорога</h3>
+          <h3 class="advantages-h3">Красивая<br/> дорога</h3>
           <div class="advantages-separator"></div>
           <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
         </div>
         <div class="advantage-item">
-          <h3 class="advantages-h3">Мало туристов</h3>
+          <h3 class="advantages-h3">Мало<br/> туристов</h3>
           <div class="advantages-separator"></div>
           <p>Большинство едет в Гранд Каньон и толпится там</p>
         </div>
@@ -89,7 +89,7 @@
           <img src="img/images/devil-bridge.jpg" alt="canyon photo" width="800" height="385">
         </div>
         <div class="advantage-item">
-          <h3 class="advantages-h3">Там есть мост дьявола</h3>
+          <h3 class="advantages-h3">Там есть<br/> мост дьявола</h3>
           <div class="advantages-separator"></div>
           <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
         </div>
@@ -101,7 +101,7 @@
           <li class="advantage-list-item">
             <img src="img/icons/home.svg" alt="house" width="75" height="72">
             <h3 class="recommend-h3">Жильё</h3>
-            <p>Рекомендуем пожить в настоящем мотеле,
+            <p>Рекомендуем пожить<br/> в настоящем мотеле,<br/>
               всё как в кино!</p>
           </li>
           <li class="advantage-list-item">
