--- a/catalog.html
+++ b/catalog.html
@@ -50,19 +50,19 @@
             </header>
             <main class="main">
                 <section class="filter">
-                    <div class="filter-name">
-                        <h1 class="filter-h1">Гостиницы Седоны</h1>
-                        <a href="index.html">
+                    <h1 class="filter-h1">Гостиницы Седоны</h1>
+                    <div class="filter-links">
+                        <a class="filter-home-page" href="index.html">
                             <img src="img/icons/home-page.svg" alt="link on home page" width="13" height="15">
                         </a>
                         <img src="img/icons/breadcrumbs.svg" alt="the arrow shows you are on the hotel page" width="6"
                             height="10">
-                        <span>Гостиницы</span>
+                        <a href="#" class="filter-hotel-link">Гостиницы</a>
                     </div>
                     <form class="form" action="https://echo.htmlacademy.ru/" method="get">
                         <fieldset class="filter-form">
                             <legend>
-                                <h4>Инфраструктура:</h4>
+                                <h4 class="filter-form-name">Инфраструктура:</h4>
                             </legend>
                             <p>
                                 <input type="checkbox" name="pool" id="pool" checked>
@@ -79,7 +79,7 @@
                         </fieldset>
                         <fieldset class="filter-form">
                             <legend>
-                                <h4>Тип жилья:</h4>
+                                <h4 class="filter-form-name">Тип жилья:</h4>
                             </legend>
                             <p>
                                 <input type="radio" name="house-type" id="hotel" value="hotel" checked>
@@ -95,7 +95,9 @@
                             </p>
                         </fieldset>
                         <fieldset class="filter-form">
-                            <legend>Стоимость,<span>₽</span>:</legend>
+                            <legend>
+                                <h4 class="filter-form-name">Стоимость, ₽:</h4>
+                            </legend>
                             <label>
                                 <input type="number" min="0" max="15000" name="min-price" value="0">
                                 от
@@ -104,38 +106,42 @@
                                 <input type="number" min="0" max="15000" name="max-price" value="9000">
                                 до
                             </label>
-                            <input type="range" min="0" max="15000" step="1">
+                            <input class="slider" type="range" min="0" max="15000" step="1">
                         </fieldset>
-                        <button class="apply" type="submit">Применить</button>
-                        <button class="reset" type="reset">Сбросить</button>
+                        <div class="filter-buttons">
+                            <button class="apply" type="submit">Применить</button>
+                            <button class="reset" type="reset">Сбросить</button>
+                        </div>
                     </form>
                 </section>
                 <section class="catalog">
-                    <div class="catalog-sorting">
-                        <h2 class="catalog-h2">Найдено гостиниц: 38</h2>
-                        <select name="sorting" id="sorting">
-                            <option value="cheap">Сначала дешевые</option>
-                            <option value="costly">Сначала дорогие</option>
-                            <option value="rating">По рейтингу</option>
-                        </select>
+                    <div class="catalog-head">
+                        <div class="catalog-sorting">
+                            <h2 class="catalog-h2">Найдено гостиниц: 38</h2>
+                            <select name="sorting" id="sorting">
+                                <option value="cheap">Сначала дешевые</option>
+                                <option value="costly">Сначала дорогие</option>
+                                <option value="rating">По рейтингу</option>
+                            </select>
+                        </div>
+                        <ul class="layout-list">
+                            <li class="layout-item">
+                                <button type="button" class="layout current-layout" aria-label="layout grid">
+                                    <img src="img/icons/grid-mode.svg" alt="grid-mode" width="16" height="14">
+                                </button>
+                            </li>
+                            <li class="layout-item">
+                                <button type="button" class="layout" aria-label="layout picture then description">
+                                    <img src="img/icons/caption-mode.svg" alt="caption-mode" width="16" height="14">
+                                </button>
+                            </li>
+                            <li class="layout-item">
+                                <button type="button" class="layout" aria-label="list">
+                                    <img src="img/icons/list-mode.svg" alt="list-mod" width="16" height="14">
+                                </button>
+                            </li>
+                        </ul>
                     </div>
-                    <ul class="layout-list">
-                        <li class="layout-item">
-                            <button type="button" class="layout" aria-label="layout grid">
-                                <img src="img/icons/grid-mode.svg" alt="grid-mode" width="16" height="14">
-                            </button>
-                        </li>
-                        <li class="layout-item">
-                            <button type="button" class="layout" aria-label="layout picture then description">
-                                <img src="img/icons/caption-mode.svg" alt="caption-mode" width="16" height="14">
-                            </button>
-                        </li>
-                        <li class="layout-item">
-                            <button type="button" class="layout" aria-label="list">
-                                <img src="img/icons/list-mode.svg" alt="list-mod" width="16" height="14">
-                            </button>
-                        </li>
-                    </ul>
                     <ul class="hotels-list">
                         <li class="hotel-item">
                             <img src="img/images/AmaraResort-Spa.jpg" alt="Amara Resort & Spa">
@@ -276,7 +282,23 @@
                     <a href="tel:+78128121212">+7 (812) 812-12-12</a>
                 </span>
                 <a class="htmlacademy-logo" href="https://htmlacademy.ru/">
-                    <img src="img/icons/logo-htmlacademy.svg" alt="html academy website" width="115" height="33">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none">
+                        <path fill="#000" d="M0 13.3v2.6h2.5v-2.6H0ZM11.6 4.9c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9
+                        8.5 9.2 7 11.2 7c1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.8c.1-3-1.8-5-4.5-5ZM26.6 5.2h-4.8V1.5h-2v3.8h-1.9v2h1.9v6c0
+                        1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.2h4.8v-2ZM41.1 5c-1.6 0-2.9.8-3.5 2h-.1a3.7 3.7 0 0
+                        0-3.4-2c-1.4 0-2.5.8-3.1 1.8h-.1V5.2H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4
+                        1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2V9.3c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13c0 1.8 1 2.8 2.8 2.8h2v-2h-1.7c-.7
+                        0-1.1-.4-1.1-1.1V.4h-2V13ZM28.9 20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6
+                        7.5a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.4c-.5-2.4-2.6-4.1-5.4-4.1a5.4 5.4 0 0 0-5.6
+                        5.6c0 3 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1a3.4 3.4 0 0 1-3.3 2.3 3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6 1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1
+                        20a4.9 4.9 0 0 0-3.9-1.7c-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-2h.1v1.7h2V18.6h-2V20Zm-3.6 7.5a3.5 3.5 0 0 1-3.6-3.6c0-2
+                        1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.2a5 5 0 0 0-3.9-2c-3.1 0-5.4 2.4-5.4 5.7 0 3.3 2.2 5.6 5.4 5.6 1.7 0 3-.8
+                        3.8-1.8h.1v1.5h2V13.8h-2v6.4Zm-3.6 7.3a3.5 3.5 0 0 1-3.6-3.6c0-2 1.4-3.6 3.6-3.6s3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.3a5.4
+                        5.4 0 0 0-5.5 5.6c0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-3h8.8c.2-3.5-2-6.2-5.5-6.2Zm0 1.9c1.7 0 3
+                        1 3.3 2.6h-6.5a3.2 3.2 0 0 1 3.2-2.6ZM98.2 18.3a4 4 0 0 0-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5
+                        0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.4l-3.6-9h-2.2l4.8 11.7c-.3.9-.7 1.2-1.7
+                        1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z"/>
+                    </svg>
                 </a>
             </footer>
         </section>
