--- a/catalog.html
+++ b/catalog.html
@@ -22,7 +22,7 @@
                             <a class="navigation-link" href="index.html">Главная</a>
                         </li>
                         <li class="navigation-item">
-                            <a class="navigation-link" href="index.html/#advantages">О Седоне</a>
+                            <a class="navigation-link" href="index.html#advantages">О Седоне</a>
                         </li>
                         <li class="navigation-item current-link">
                             <a class="navigation-link" href="#">Гостиницы</a>
@@ -40,7 +40,7 @@
                             </button>
                         </li>
                         <li class="nav-button">
-                            <button class="want-there" type="button" onclick="document.location='#'">
+                            <button class="brown-button" type="button" onclick="document.location='#'">
                                 Хочу сюда!
                             </button>
                             <!--это ссылка на попап -->
@@ -144,8 +144,8 @@
                     </div>
                     <ul class="hotels-list">
                         <li class="hotel-item">
-                            <img src="img/images/AmaraResort-Spa.jpg" alt="Amara Resort & Spa">
-                            <a href="#" class="about-hotel">
+                            <a href="#" class="hotel-about">
+                                <img src="img/images/AmaraResort-Spa.jpg" alt="Amara Resort & Spa">
                                 <h3 class="hotel-item-h3">Amara Resort & Spa</h3>
                             </a>
                             <p class="name-and-price">
@@ -154,7 +154,7 @@
                             </p>
                             <div class="more-and-like">
                                 <a class="button-more" href="#">подробнее</a>
-                                <button type="button">в избранное</button>
+                                <button class="button-favorite" type="button">в избранное</button>
                             </div>
                             <div class="stars-and-rank">
                                 <img src="img/icons/fourStars.svg" alt="4 звезды">
@@ -162,8 +162,8 @@
                             </div>
                         </li>
                         <li class="hotel-item">
-                            <img src="img/images/VillasAtPocoDiablo.jpg" alt="Villas at Poco Diablo">
-                            <a href="#" class="about-hotel">
+                            <a href="#" class="hotel-about">
+                                <img src="img/images/VillasAtPocoDiablo.jpg" alt="Villas at Poco Diablo">
                                 <h3 class="hotel-item-h3">Villas at Poco Diablo</h3>
                             </a>
                             <p class="name-and-price">
@@ -172,7 +172,7 @@
                             </p>
                             <div class="more-and-like">
                                 <a class="button-more" href="#">подробнее</a>
-                                <button type="button">в избранном</button>
+                                <button class="button-favorite button-favorite-choose" type="button">в избранном</button>
                             </div>
                             <div class="stars-and-rank">
                                 <img src="img/icons/fourStars.svg" alt="4 звезды">
@@ -180,8 +180,8 @@
                             </div>
                         </li>
                         <li class="hotel-item">
-                            <img src="img/images/DesertQuailInn.jpg" alt="Desert Quail Inn">
-                            <a href="#" class="about-hotel">
+                            <a href="#" class="hotel-about">
+                                <img src="img/images/DesertQuailInn.jpg" alt="Desert Quail Inn">
                                 <h3 class="hotel-item-h3">Desert Quail Inn</h3>
                             </a>
                             <p class="name-and-price">
@@ -190,7 +190,7 @@
                             </p>
                             <div class="more-and-like">
                                 <a class="button-more" href="#">подробнее</a>
-                                <button type="button">в избранное</button>
+                                <button class="button-favorite" type="button">в избранное</button>
                             </div>
                             <div class="stars-and-rank">
                                 <img src="img/icons/threeStars.svg" alt="3 звезды">
@@ -198,8 +198,8 @@
                             </div>
                         </li>
                         <li class="hotel-item">
-                            <img src="img/images/GreenTreeInn.jpg" alt="GreenTree Inn">
-                            <a href="#" class="about-hotel">
+                            <a href="#" class="hotel-about">
+                                <img src="img/images/GreenTreeInn.jpg" alt="GreenTree Inn">
                                 <h3 class="hotel-item-h3">GreenTree Inn</h3>
                             </a>
                             <p class="name-and-price">
@@ -208,7 +208,7 @@
                             </p>
                             <div class="more-and-like">
                                 <a class="button-more" href="#">подробнее</a>
-                                <button type="button">в избранное</button>
+                                <button class="button-favorite" type="button">в избранное</button>
                             </div>
                             <div class="stars-and-rank">
                                 <img src="img/icons/twoStars.svg" alt="2 звезды">
@@ -242,7 +242,7 @@
                     <h2 class="subscribe-h2">Подпишитесь на рассылку</h2>
                     <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
                     <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-                        <input class="email-subscribe" type="email" name="email" id="email" placeholder="Ваш e-mail">
+                        <input class="subscribe-email" type="email" name="email" id="email" placeholder="Ваш e-mail">
                         <button class="button-subscribe" type="submit">Подписаться</button>
                     </form>
                 </section>
