--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               </button>
             </li>
             <li class="nav-button">
-              <button class="want-there" type="button" onclick="document.location='#'">
+              <button class="brown-button" type="button" onclick="document.location='#'">
                 Хочу сюда!
               </button>
               <!--это ссылка на попап -->
@@ -61,36 +61,36 @@
             <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
         </section>
-        <section class="advantages" id="advantages">
+        <section class="advantage" id="advantage">
           <div class="advantage-item">
-            <h3 class="advantages-h3">Настоящий городок</h3>
-            <div class="advantages-separator-light"></div>
+            <h3 class="advantage-h3">Настоящий городок</h3>
+            <div class="advantage-separator-light"></div>
             <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
           </div>
-          <div class="advantage-item img-advantage">
+          <div class="advantage-item advantage-img">
             <img src="img/images/true-city.jpg" alt="дом среди цветов" width="800" height="385">
           </div>
           <div class="advantage-item">
-            <h3 class="advantages-h3">Небольшая площадь</h3>
-            <div class="advantages-separator"></div>
+            <h3 class="advantage-h3">Небольшая площадь</h3>
+            <div class="advantage-separator"></div>
             <p>Все достопримечательности находятся очень близко</p>
           </div>
           <div class="advantage-item">
-            <h3 class="advantages-h3">Красивая<br /> дорога</h3>
-            <div class="advantages-separator"></div>
+            <h3 class="advantage-h3">Красивая<br /> дорога</h3>
+            <div class="advantage-separator"></div>
             <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
           </div>
           <div class="advantage-item">
-            <h3 class="advantages-h3">Мало<br /> туристов</h3>
-            <div class="advantages-separator"></div>
+            <h3 class="advantage-h3">Мало<br /> туристов</h3>
+            <div class="advantage-separator"></div>
             <p>Большинство едет в Гранд Каньон и толпится там</p>
           </div>
-          <div class="advantage-item img-advantage">
+          <div class="advantage-item advantage-img">
             <img src="img/images/devil-bridge.jpg" alt="рыжие горы" width="800" height="385">
           </div>
           <div class="advantage-item">
-            <h3 class="advantages-h3">Там есть<br /> мост дьявола</h3>
-            <div class="advantages-separator-light"></div>
+            <h3 class="advantage-h3">Там есть<br /> мост дьявола</h3>
+            <div class="advantage-separator-light"></div>
             <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </div>
           <div class="slogan">
@@ -131,7 +131,7 @@
           <h2 class="subscribe-h2">Подпишитесь на рассылку</h2>
           <p>Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
           <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-            <input class="email-subscribe" type="email" name="email" id="email" placeholder="Ваш e-mail">
+            <input class="subscribe-email" type="email" name="email" id="email" placeholder="Ваш e-mail">
             <button class="button-subscribe" type="submit">Подписаться</button>
           </form>
         </section>
