feat: main page done

--- a/catalog.html
+++ b/catalog.html
@@ -22,10 +22,10 @@
                             <a class="navigation-link" href="index.html">Главная</a>
                         </li>
                         <li class="navigation-item">
-                            <a class="navigation-link" href="index.html#advantages">О Седоне</a>
+                            <a class="navigation-link" href="index.html#advantage">О Седоне</a>
                         </li>
-                        <li class="navigation-item current-link">
-                            <a class="navigation-link" href="#">Гостиницы</a>
+                        <li class="navigation-item">
+                            <a class="navigation-link current-link" href="#">Гостиницы</a>
                         </li>
                     </ul>
                     <ul class="nav-buttons">
@@ -285,7 +285,7 @@
                     <span class="phone">
                         <a href="tel:+78128121212">+7 (812) 812-12-12</a>
                     </span>
-                    <a class="htmlacademy-logo" href="https://htmlacademy.ru/">
+                    <a class="htmlacademy" href="https://htmlacademy.ru/">
                         <span class="visually-hidden">html academy</span>
                         <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none">
                             <path fill="#000" d="M0 13.3v2.6h2.5v-2.6H0ZM11.6 4.9c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9
