--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
             <img src="img/icons/logo.svg" alt="logo city of sedona" width="140" height="70">
           </a>
           <ul class="navigation">
-            <li class="navigation-item current-link">
-              <a class="navigation-link" href="#">Главная</a>
+            <li class="navigation-item">
+              <a class="navigation-link current-link" href="#">Главная</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#advantages">О Седоне</a>
+              <a class="navigation-link" href="#advantage">О Седоне</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -174,10 +174,10 @@
           <span class="phone">
             <a href="tel:+78128121212">+7 (812) 812-12-12</a>
           </span>
-          <a class="htmlacademy-logo" href="https://htmlacademy.ru/">
+          <a class="htmlacademy" href="https://htmlacademy.ru/">
             <span class="visually-hidden">html academy</span>
             <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="none">
-              <path fill="#000" class="htmlacademy-logo" d="M0 13.3v2.6h2.5v-2.6H0ZM11.6 4.9c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9
+              <path fill="#000" d="M0 13.3v2.6h2.5v-2.6H0ZM11.6 4.9c-1.6 0-2.8.7-3.6 1.7h-.1V.4h-2v15.5h2v-5.3C7.9
               8.5 9.2 7 11.2 7c1.8 0 2.9 1.4 2.9 3.2v5.7h2V9.8c.1-3-1.8-5-4.5-5ZM26.6 5.2h-4.8V1.5h-2v3.8h-1.9v2h1.9v6c0
               1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1V7.2h4.8v-2ZM41.1 5c-1.6 0-2.9.8-3.5 2h-.1a3.7 3.7 0 0
               0-3.4-2c-1.4 0-2.5.8-3.1 1.8h-.1V5.2H29v10.6h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4
